# GLStuff

./: .clang-format  .gitignore  CMakeLists.txt  README.md
App/: App.qrc  AppContext.cpp  AppContext.hpp  AppLauncher.cpp  AppLauncher.hpp  CMakeLists.txt  Models.hpp  Startup.cpp
App/Models/: Camera.cpp  Camera.hpp  MainWindow.cpp  MainWindow.hpp  Renderer.cpp  Renderer.hpp  Surface3D.cpp  Surface3D.hpp  TextureRenderer.cpp  TextureRenderer.hpp
App/UI/: MainWindow.qml
Cmake/: OpenCV.cmake  Qt.cmake
Lib/: CMakeLists.txt
Lib/Common/: Finally.cpp  Finally.hpp  NonCopyable.hpp  OsDetection.hpp  SafeContainer.hpp  Singleton.hpp
Lib/GL/: BackgroundContext.hpp  ContextAwareWrapper.hpp  GL.cpp  GL.hpp  GPULoaders.cpp  GPULoaders.hpp  Helpers.cpp  Helpers.hpp  RenderItem.hpp  Texture.hpp  TexturePool.hpp  Types.hpp
Lib/GL/Impls/: BackgroundContext.cpp  BackgroundContext.hpp  Texture.cpp  Texture.hpp  TexturePool.cpp  TexturePool.hpp
Lib/Imaging/: Helpers.cpp  Helpers.hpp  Image.cpp  Image.hpp  OpenCV.hpp
Lib/Macro/: Qt.hpp
Lib/Qml/: OpenGLPaintedItem.cpp  OpenGLPaintedItem.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp
Lib/Threading/: BackgroundOwnerAndContext.cpp  BackgroundOwnerAndContext.hpp  Context.cpp  Context.hpp  Latch.cpp  Latch.hpp  Owner.cpp  Owner.hpp  OwnerAndContext.hpp
